fix for contact field for safari on mobile

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1374,6 +1374,10 @@
 /* -------------------------------------------------------------------------- */
 
 /* _____________________________ Contact Field _____________________________ */
+#contactFieldMainContainer {
+  height: 100%;
+}
+
 #contactFieldLoading {
   display: flex;
   flex-wrap: row wrap;
